# reef_control

./: CMakeLists.txt  README.md  package.xml
cfg/: Gains.cfg
include/: PID.h  controller.h  simple_pid.h
launch/: logitech_sys_id.launch  logitech_telelop_control.launch  logitech_telelop_control.launch.save  logitech_teleop_control.launch  logitech_teleop_velocity_control.launch  mavros_velocity_teleop.launch  pix-test.launch  pixhawk_rgbd.launch  realsense_logitech_teleop_velocity.launch  reef2_altitude_hold.launch  reef2_optitrack_logitech_teleop_velocity_control.launch  reef2_optitrack_position_hold.launch  reef2_qualisys_logitech_teleop_velocity_control.launch  reef2_qualisys_position_hold.launch
params/: dodo_pid.bak.yaml  dodo_pid.yaml  dodo_pid.yaml.save  et_pid.yaml  hex_pid.yaml  kiwi_pid.yaml  quad_pid.yaml
scripts/: configure_lookup_table.m
src/: PID.cpp  controller.cpp  pid_node.cpp  simple_pid.cpp
